# blitzparse

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
python_test/: benchmark.py  run_test.py  test_graph.py
src/: errors.rs  lib.rs
src/graph_builder/: builder.rs  chunker.rs  mod.rs  models.rs
src/parsers/: docx.rs  mod.rs  pdf.rs  txt.rs
tests/: integration_test.rs
