[package]
name = "blitz_parse"
version = "0.1.0"
edition = "2021"

[lib]
name = "blitz_parse" 
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module", "abi3-py38"] }
pdf-extract = "0.9.0"
docx-rs = "0.4.18"
rayon = "1.8"          # Parallel processing for large documents
memmap2 = "0.9"        # Memory-mapped file I/O for large files
zip="0.6"
quick-xml = "0.36.1"   

[dev-dependencies]
tempfile = "3.10.1"

# Maximum performance profile
[profile.release]
lto = "fat"            # Full link-time optimization
codegen-units = 1      # Maximum optimization 
panic = "abort"        # Smaller binaries
opt-level = 3          # Maximum optimization
strip = true           # Remove debug symbols
target-cpu = "native"  # Optimize for target CPU

# Fast development builds
[profile.dev]
opt-level = 1

# Optimize dependencies even in debug mode
[profile.dev.package."*"]
opt-level = 3

